flamingone lifecycle css swaping

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Flamingone</title>
     <link rel="stylesheet" type="text/css" href="css/flamingone.css" />
     <link rel="stylesheet" type="text/css" href="css/pallet1.css" />
+    <link id="localStyle" rel="stylesheet" type="text/css" href="css/firstMap.css"/>
     <link rel="stylesheet" type="text/css" href="css/guiMenus.css" />
     <link rel="stylesheet" type="text/css" href="css/tools.css" />
   </head>
@@ -137,7 +138,7 @@
       </g>
     </svg>
     <div id="toolContainer" class="menu"></div>
-    <div id="curtain" />
+    <div id="curtain"></div>
     <div id="messageContainer" class="menu">
       <img id="messageImg" width="250px" height="250px" />
       <p id="messageP"></p>
@@ -167,15 +168,11 @@
     ></script>
     <!-- my libraries -->
     <script type="text/javascript" src="js/svgGeneric.js"></script>
-    <script type="text/javascript" src="js/parallaxSVG.js"></script>
-    <!-- classes -->
-    <script type="text/javascript" src="js/pointOfInterest.js"></script>
-    <script type="text/javascript" src="js/tool.js"></script>
     <!-- controllers -->
     <script type="text/javascript" src="js/guiMenus.js"></script>
-    <script type="text/javascript" src="js/mapNavigation.js"></script>
     <script type="text/javascript" src="js/inventoryFunctions.js"></script>
     <!-- flamingone -->
     <script type="text/javascript" src="js/flamingone.js"></script>
+    <script id="localScript" type="text/javascript" src="js/maps/firstMap.js"></script>
   </body>
 </html>
