Converted maps to objects

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <title>Flamingone</title>
     <link rel="stylesheet" type="text/css" href="css/flamingone.css" />
     <link rel="stylesheet" type="text/css" href="css/pallet1.css" />
-    <link id="localStyle" rel="stylesheet" type="text/css" href="css/firstMap.css"/>
+    <link
+      id="localStyle"
+      rel="stylesheet"
+      type="text/css"
+      href="css/firstMap.css"
+    />
     <link rel="stylesheet" type="text/css" href="css/guiMenus.css" />
     <link rel="stylesheet" type="text/css" href="css/tools.css" />
   </head>
@@ -168,11 +173,19 @@
     ></script>
     <!-- my libraries -->
     <script type="text/javascript" src="js/svgGeneric.js"></script>
+    <!-- global variables and functions -->
+    <script type="text/javascript" src="js/globalFlamingone.js"></script>
     <!-- controllers -->
     <script type="text/javascript" src="js/guiMenus.js"></script>
     <script type="text/javascript" src="js/inventoryFunctions.js"></script>
-    <!-- flamingone -->
-    <script type="text/javascript" src="js/flamingone.js"></script>
-    <script id="localScript" type="text/javascript" src="js/maps/firstMap.js"></script>
+    <!-- classes -->
+    <script type="text/javascript" src="js/classes.js"></script>
+    <!-- maps -->
+    <script type="text/javascript" src="js/maps/firstMap.js"></script>
+    <script type="text/javascript" src="js/maps/orchardMap.js"></script>
+    <script type="text/javascript" src="js/maps/witchHouseMap.js"></script>
+    <script type="text/javascript" src="js/maps/suburbMap.js"></script>
+    <!-- start game -->
+    <script type="text/javascript" src="js/launchFlamingone.js"></script>
   </body>
 </html>
